<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="com.nizhal.milkbasket.HomePage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/merlo_semi_bold"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_products"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/merlo_regular"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homecare"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/merlo_regular"
        android:textSize="18dp"/>

    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="175dp"
        android:id="@+id/milk"
        android:layout_marginLeft="27dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/milk"
            android:layout_centerHorizontal="true"
            android:id="@+id/item1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk"
            android:layout_below="@+id/item1"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="175dp"
        android:id="@+id/curd"
        android:layout_marginLeft="195dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/curd"
            android:layout_centerHorizontal="true"
            android:id="@+id/item2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curd"
            android:layout_below="@+id/item2"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="325dp"
        android:id="@+id/panner"
        android:layout_marginLeft="27dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/panner"
            android:layout_centerHorizontal="true"
            android:id="@+id/item3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panner"
            android:layout_below="@+id/item3"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:id="@+id/cheese"
        android:layout_marginTop="325dp"
        android:layout_marginLeft="195dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/cheese"
            android:layout_centerHorizontal="true"
            android:id="@+id/item4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheese"
            android:layout_below="@+id/item4"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:id="@+id/vegetables"
        android:layout_marginTop="465dp"
        android:layout_marginLeft="27dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/vegetables"
            android:layout_centerHorizontal="true"
            android:id="@+id/item5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetables"
            android:layout_below="@+id/item5"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:id="@+id/fruits"
        android:layout_marginTop="465dp"
        android:layout_marginLeft="195dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/fruits"
            android:layout_centerHorizontal="true"
            android:id="@+id/item6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fruits"
            android:layout_below="@+id/item6"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>


</RelativeLayout>
