<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="com.nizhal.milkbasket.Vegetable">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_vegetables"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/merlo_semi_bold"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_selling"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/merlo_regular"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/others"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/merlo_regular"
        android:textSize="18dp"/>

    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="175dp"
        android:id="@+id/tomato"
        android:layout_marginLeft="27dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/tomato"
            android:layout_centerHorizontal="true"
            android:id="@+id/item1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomato"
            android:layout_below="@+id/item1"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="175dp"
        android:id="@+id/onion"
        android:layout_marginLeft="195dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/onion"
            android:layout_centerHorizontal="true"
            android:id="@+id/item2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion"
            android:layout_below="@+id/item2"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="325dp"
        android:id="@+id/ladiesf"
        android:layout_marginLeft="27dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/lf"
            android:layout_centerHorizontal="true"
            android:id="@+id/item3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ladies_finger"
            android:layout_below="@+id/item3"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:id="@+id/carrot"
        android:layout_marginTop="325dp"
        android:layout_marginLeft="195dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/carrot"
            android:layout_centerHorizontal="true"
            android:id="@+id/item4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrot"
            android:layout_below="@+id/item4"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:id="@+id/garlic"
        android:layout_marginTop="465dp"
        android:layout_marginLeft="27dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/garlic"
            android:layout_centerHorizontal="true"
            android:id="@+id/item5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garlic"
            android:layout_below="@+id/item5"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:id="@+id/caulif"
        android:layout_marginTop="465dp"
        android:layout_marginLeft="195dp">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/cauli"
            android:layout_centerHorizontal="true"
            android:id="@+id/item6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cauliflower"
            android:layout_below="@+id/item6"
            android:fontFamily="@font/merlo_regular"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="22dp"/>
    </RelativeLayout>


</RelativeLayout>
